--- a/views/student/course/2_Datatype_and_Variable-course.ejs
+++ b/views/student/course/2_Datatype_and_Variable-course.ejs
@@ -25,6 +25,7 @@
         
     </style>
     
+    <link rel='stylesheet' href='stylesheets/home.css' />
     <link rel='stylesheet' href='stylesheets/gamequiz.css' />
     <script src="javascripts/gamequiz.js"></script>
     <title>Datatype and Variable</title>
@@ -54,7 +55,6 @@
 
     <div class="content">
         <div id = "content" class="container">
-            <br><br>
             <h2>บทที่ 2 Datatype and Variable</h2>
             <a href="/course-Datatype_and_Variable#do_while_Loop" class="link-dark rounded collapsed"  type="button"  >
                 กดเพื่อไปยังแบบฝึกหัด
@@ -77,6 +77,7 @@
 
         <BR id="do_while_Loop">
         <!-- Knowledge -->
+        <h2>Knowledge</h2>
         <div class="game">
             <!--* ข้อ 1 K1 *-->
             <div class="gamecontent">
@@ -211,6 +212,7 @@
         </div>
 
         <!-- Tracing -->
+        <h2>Tracing</h2>
         <div class="game">
 
             <!--* ข้อ 7 T1 *-->
@@ -232,8 +234,6 @@
                     <div class="btn">
                         <p id="demo" class="button" onclick="myFunctionW7()">20</p>    
                         <p id="demo" class="button" onclick="myFunctionT7()">30</p>                                                                      
-                    </div>
-                    <div class="btn">
                         <p id="demo" class="button" onclick="myFunctionW7()">0</p>  
                         <p id="demo" class="button" onclick="myFunctionW7()">ไม่มีผลลัพธ์</p>  
                     </div>
@@ -266,8 +266,6 @@
                     <div class="btn">
                         <p id="demo" class="button" onclick="myFunctionW8()">8, C, 80</p>    
                         <p id="demo" class="button" onclick="myFunctionW8()">10, A, 100</p>                                                                      
-                    </div>
-                    <div class="btn">
                         <p id="demo" class="button" onclick="myFunctionW8()">8, C, 100</p>  
                         <p id="demo" class="button" onclick="myFunctionT8()">Error</p>  
                     </div>
@@ -278,6 +276,7 @@
         </div>
 
         <!-- Explaining -->
+        <h2>Explaining</h2>
         <div class="game">
 
             <!--* ข้อ 9 E8 *-->
