--- a/public/stylesheets/gamequiz.css
+++ b/public/stylesheets/gamequiz.css
@@ -28,8 +28,7 @@
     font-size: 18px;
     background-color: #37228D;
     height: 400px;
-    border-radius: 10px;
-    
+    border-radius: 10px; 
 }
 
 .question-E{
@@ -37,10 +36,8 @@
     font-size: 18px;
     background-color: #37228D;
     height: 400px;
-    border-radius: 10px;
-    
+    border-radius: 10px; 
 }
-
 h5{
     background-color: #000000;
     padding: 15px;
@@ -77,13 +74,14 @@ div.btn {
 }
 .gamecontent-T {
     background-color: #C3C3DA;
-    height: 600px;
-    width: 400px;
+    height: auto;
+    width: auto;
     padding: 15px;
     border-radius: 20px;
     align-items: center;
     margin: 20px;
 }
+
 
 .gamecontent-E {
     background-color: #C3C3DA;
