--- a/views/student/course/2_Datatype_and_Variable-course.ejs
+++ b/views/student/course/2_Datatype_and_Variable-course.ejs
@@ -88,7 +88,8 @@
                     <div class="btn">
                         <p id="demo" class="button" onclick="myFunctionW1()">ข้อความ</p>   
                         <p id="demo" class="button" onclick="myFunctionW1()">ตัวอักขระ</p>    
-                    </div></div>
+                    </div>
+                </div>
                     
                 </div>
             </div>
