--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -37,8 +37,9 @@
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>4. Operators and Expressions</b>
+                                    <br><a href="/course-Operators_and_Expressions-pretest" style="color:black">แบบทดสอบก่อนเรียน</a>
                                     <br><a href="/course-Operators_and_Expressions" style="color:black">เนื้อหาบทเรียน</a>
-                                    <!--<br><a href="/course-Operators-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
+                                    <br><a href="/course-Operators_and_Expressions-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>5. Selection Statement&Output </b>
