--- a/public/stylesheets/home1.css
+++ b/public/stylesheets/home1.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Quantico&display=swap');
 
 html {
-    height: 100%;
+    height: 110%;
 }
 body {
-    background-color: #faefe8;
+    background-color: #E2D9E5;
     font-family: 'Quantico', sans-serif;
     height: 100%;
 }
@@ -28,7 +28,6 @@ main {
     padding: 10px;
     width: auto;
 }
-
 
 .content {
     grid-area: 2  / span 4 ;
