--- a/views/student/course/3_Input_and_Output-course.ejs
+++ b/views/student/course/3_Input_and_Output-course.ejs
@@ -57,9 +57,18 @@
         <div id = "content" class="container">
     <!--   C Language -->
             <div class="accordion" id="accordionParentSyntax">
-                <h1>บทที่ 3 Input and Output</h1>
+                <h2>บทที่ 3 Input and Output</h2>
+                <b>แบบฝึกหัด</b>
+                <a href="/course-Input_and_Output#Knowledge" class="scrollbtn"  type="button"  >
+                    Knowledge
+                </a>
+                <a href="/course-Input_and_Output#Tracing" class="scrollbtn"  type="button"  >
+                    Tracing
+                </a>
+                <a href="/course-Input_and_Output#Explaining" class="scrollbtn"  type="button"  >
+                    Explaining
+            </a>
                 <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                    
                     <!--   ## -->
                     <iframe src="https://drive.google.com/file/d/1eGc7LzAFBFGyFDa_BBvHZ_UpD8fywx6M/preview" width="100%" height="820" allow="autoplay"></iframe>
                     <h2>Input and Output 🔥</h2>
@@ -73,6 +82,8 @@
 
 
             <br><br>
+
+            <BR id="Knowledge"> <br><br>
             <h2>Knowledge</h2>
             <div class="game">
             <!--* ข้อ 1 K1 *-->
@@ -302,8 +313,8 @@
                             </div>
 
 
-             <!-- Tracing -->
-             <h2>Tracing</h2>
+            <BR id="Tracing"> <br><br>
+            <h2>Tracing</h2>
             <div class="game">
             <!--* ข้อ 11 T1 *-->
             <div class="gamecontent-T">
@@ -690,7 +701,7 @@
                         </div>  
                     </div>
 
-        <!-- Explaining -->
+        <BR id="Explaining"> <br><br>
         <h2>Explaining</h2>
         <div class="game">
             <!--* ข้อ 6 E1 *-->
