--- a/views/student/course/2_Datatype_and_Variable-course.ejs
+++ b/views/student/course/2_Datatype_and_Variable-course.ejs
@@ -56,10 +56,17 @@
     <div class="content">
         <div id = "content" class="container">
             <h2>บทที่ 2 Datatype and Variable</h2>
-            <a href="/course-Datatype_and_Variable#do_while_Loop" class="link-dark rounded collapsed"  type="button"  >
-                กดเพื่อไปยังแบบฝึกหัด
-                    </a>
-
+            <b>แบบฝึกหัด</b>
+            <a href="/course-Datatype_and_Variable#Knowledge" class="scrollbtn"  type="button"  >
+                Knowledge
+            </a>
+            <a href="/course-Datatype_and_Variable#Tracing" class="scrollbtn"  type="button"  >
+                Tracing
+            </a>
+            <a href="/course-Datatype_and_Variable#Explaining" class="scrollbtn"  type="button"  >
+                Explaining
+            </a>
+            
             <div class="accordion" id="accordionParentSyntax">
                 <iframe src="https://drive.google.com/file/d/1qc9BXFUa_CnqbDlXgEb26_lj2bOlteC2/preview" width="100%" height="820" allow="autoplay"></iframe>
                 <br><br><h4>เริ่มต้นใช้งาน Online GDB และ Dev C++ IDE 🔥</h4>
@@ -75,8 +82,7 @@
                 
         <br><br>
 
-        <BR id="do_while_Loop">
-        <!-- Knowledge -->
+        <BR id="Knowledge"> <br><br>
         <h2>Knowledge</h2>
         <div class="game">
             <!--* ข้อ 1 K1 *-->
@@ -212,8 +218,8 @@
             </div>
         </div>
 
-        <!-- Tracing -->
-        <h2>Tracing</h2>
+        <BR id="Tracing"> <br><br>
+        <h2>Tracing</h2> 
         <div class="game">
 
             <!--* ข้อ 7 T1 *-->
@@ -276,8 +282,8 @@
             </div>  
         </div>
 
-        <!-- Explaining -->
-        <h2>Explaining</h2>
+        <BR id="Explaining"> <br><br>
+        <h2>Explaining</h2> 
         <div class="game">
 
             <!--* ข้อ 9 E8 *-->
