--- a/views/student/course/3_Input_and_Output-course.ejs
+++ b/views/student/course/3_Input_and_Output-course.ejs
@@ -67,7 +67,10 @@
                 </a>
                 <a href="/course-Input_and_Output#Explaining" class="scrollbtn"  type="button"  >
                     Explaining
-            </a>
+                </a>
+                <a href="/course-Input_and_Output#Writing" class="scrollbtn"  type="button"  >
+                    Writing
+                </a>
                 <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
                     <!--   ## -->
                     <iframe src="https://drive.google.com/file/d/1eGc7LzAFBFGyFDa_BBvHZ_UpD8fywx6M/preview" width="100%" height="820" allow="autoplay"></iframe>
@@ -780,10 +783,64 @@
     
             </div>
 
-
-
-
-
+            <!--* writing *-->
+            <BR id="Writing"> <br><br>
+                <h2>Writing</h2>
+                <!--* 1 *-->
+                <div class="gamecontent-W">
+                    <iframe src="https://drive.google.com/file/d/1IGaU1VE3gx_hKehCFpz3dfZsvgObp5kv/preview" width="440" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction1()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV1" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/1FiQ3l_QXBXsA7gK3QHTVPcJfgP3Unl5t/preview" width="640" height="480" allow="autoplay"></iframe> 
+                        <iframe src="https://drive.google.com/file/d/1SGw5IUsHrH6j-67MwaL1L9-w10bY9WqQ/preview" width="400" height="480" allow="autoplay"></iframe>
+                </div></div>
+                <!--* 2 *-->
+                <div class="gamecontent-W">
+                    <iframe src="https://drive.google.com/file/d/1WHBqzdUWI3j8xn9gKyJhKaB3JLNzGEgu/preview" width="440" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction2()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV2" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/13DviSpS2PweOw2nMCoU_BXOP_-_kOzdc/preview" width="640" height="480" allow="autoplay"></iframe> 
+                        <iframe src="https://drive.google.com/file/d/1XRE1VdQRJHaSzU2mCujwtvXcSKiK7Lj3/preview" width="400" height="480" allow="autoplay"></iframe>
+                </div></div>
+                <!--* 3 *-->
+                <div class="gamecontent-W">
+                    <iframe src="https://drive.google.com/file/d/1DigWwUq32UnWldXQPV4qW3d4EbrZonH0/preview" width="440" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction3()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV3" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/1ZDNRPzFOhXlO7c3gIIzQZWzAWanze__a/preview" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1cgL95bZbNM8dlralGqudNXNRxe85UbOx/preview" width="400" height="480" allow="autoplay"></iframe>
+                    </div></div>
+                <!--* 4 *-->
+                <div class="gamecontent-W">
+                    <iframe src="https://drive.google.com/file/d/1d2eKyeI8b7HcGREkqCtjTdprx_YMaGvJ/preview" width="440" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction4()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV4" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/15-yP5Hea3pgJ9Bgd7fTbwIv7SAsMRohH/preview" width="640" height="480" allow="autoplay"></iframe>                
+                        <iframe src="https://drive.google.com/file/d/11ExhzaoA3G0enbk7vrwylD6B0jFOdJZW/preview" width="400" height="480" allow="autoplay"></iframe>
+                </div></div>
+                <!--* 5 *-->
+                <div class="gamecontent-W">
+                    <iframe src="https://drive.google.com/file/d/1eawCsMXTtrUxF0eCASmNio_xasMWl6Zb/preview" width="440" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction5()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV5" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/1m7bZv8HsebLpbeeqJ6whRqZ2fV4eFx4v/preview" width="640" height="480" allow="autoplay"></iframe>                
+                        <iframe src="https://drive.google.com/file/d/1KVwUzh0kRYZuFtWklyNjXUjP7BaO745g/preview" width="400" height="480" allow="autoplay"></iframe>
+                </div></div>
 
         <!-- 
         <button onclick="window.location.href='/course-Datatype-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
