--- a/views/student/course/course_main.ejs
+++ b/views/student/course/course_main.ejs
@@ -37,6 +37,7 @@
 
     <main class="grid-container">
 
+        <div>
         <!-- POSTTEST  -->
         <% if (PostTestDone === 1) { %><%- include('../layouts/post-test') %><% }%>
         <!-- END Of POSTTEST  -->
@@ -48,6 +49,6 @@
         <!-- MIDDLE 2 -->
         <%- include('../layouts/course-middle_Score') %>
         <!-- END Of MIDDLE  -->
-
+        </div>
 
 <%- include('../layouts/footer') %>
